# -rdetdags.nu

./: .envrc  .gitignore  Dockerfile  README.md  components.py  compose.yml  dags.py  devenv.nix  ghcr-password.age  pyproject.toml  recipients.age  secrets.env.age
.github/workflows/: build.yml  ci.yml
dax/: __init__.py  components.py  constants.py  recurring.py  test_recurring.py
dax/static/: base.css  base.js  countdown.js
