[project]
authors = [
  {name = "David Svenson", email = "davidsvenson@outlook.com"},
]
dependencies = [
  "dj-database-url",
  "django",
  "flask>=3.1.2",
  "gunicorn",
  "htpy",
  "psycopg[binary]",
  "sentry-sdk[django]",
]
dynamic = ["version", "description"]
name = "ardetdags"
requires-python = ">=3.13"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
includes = [
  "ärdetdags",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "ERA001", # commented-out-code
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T10", # flake8-debugger
  "DJ", # flake8-django
  "T20", # flake8-print
  "PYI024", # flake8-pyi collections-named-tuple
  "TID", # flake8-tidy-imports
  "TD", # flake8-todos
  "TCH", # flake8-type-checking
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "FLY", # flynt
  "I", # isort
  "PERF", # perflint
  "E", # pycodestyle error
  "W", # pycodestyle warning
  "F", # pyflakes
  "UP", # pyupgrade
  "RUF100", # yesqa equivalence
]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
enable_error_code = ["truthy-bool"]
files = ["ärdetdags"]
implicit_reexport = false
plugins = ["mypy_django_plugin.main"]
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "ärdetdags.conf.settings.development"

[dependency-groups]
dev = [
  "django-stubs[compatible-mypy]",
  "django-types",
  "mypy",
  "pytest-django",
  "pytest",
]
