[project]
authors = [
  {name = "David Svenson", email = "davidsvenson@outlook.com"},
  {name = "Emil Björkroth", email = "emil.bjorkroth@gmail.com"},
]
dependencies = [
  "flask>=3.1.2",
  "flask-sqlalchemy>=3.1.1",
  "gunicorn",
  "htpy",
  "markupsafe>=3.0.2",
  "sentry-sdk[flask]",
]
dynamic = ["version", "description"]
name = "dax"
requires-python = ">=3.13"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
includes = [
  "dax",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "ERA001", # commented-out-code
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T10", # flake8-debugger
  "T20", # flake8-print
  "PYI024", # flake8-pyi collections-named-tuple
  "TID", # flake8-tidy-imports
  "TD", # flake8-todos
  "TCH", # flake8-type-checking
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "FLY", # flynt
  "I", # isort
  "PERF", # perflint
  "E", # pycodestyle error
  "W", # pycodestyle warning
  "F", # pyflakes
  "UP", # pyupgrade
  "RUF100", # yesqa equivalence
]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
enable_error_code = ["truthy-bool"]
files = ["ärdetdags"]
implicit_reexport = false
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[dependency-groups]
dev = [
  "mypy",
  "pytest",
]
